Bones No Parent+Not Tail = Crash #53054

Closed
opened 2017-10-12 22:22:30 +02:00 by ¿? · 13 comments

Win7-64
Broken: 5bd8ac9

Single bone without parent
If you add IK constraint and uncheck Use Tail, blender crashes.
Appears to happen consistently (and only) if the bone doesn't have a parent.

Win7-64 Broken: 5bd8ac9 Single bone without parent If you add IK constraint and uncheck Use Tail, blender crashes. Appears to happen consistently (and only) if the bone doesn't have a parent.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ebone

Added subscriber: @Ebone

Added subscriber: @zeauro

Added subscriber: @zeauro

I did not manage to reproduce the crash on my machine with current master or 2.79.

Thanks for the report but it would be helpful if you add a blend-file to the report that demonstrates the crash.

Please:

Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
Launch Blender from the command line with -d option and attach as text file here any error printed out in the console (do not paste it directly in comment).

Marking as "Incomplete" until the requested information from console or .blend file demonstrating the crash is provided.

I did not manage to reproduce the crash on my machine with current master or 2.79. Thanks for the report but it would be helpful if you add a blend-file to the report that demonstrates the crash. Please: Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not). Launch Blender from the command line with -d option and attach as text file here any error printed out in the console (do not paste it directly in comment). Marking as "Incomplete" until the requested information from console or .blend file demonstrating the crash is provided.

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Sergey Sharybin was assigned by Campbell Barton 2017-10-13 12:22:51 +02:00

Only managed to redo this in blender2.8, looks like pointer checks resolve, assigning to Sergey.

diff --git a/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc b/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc
index d610dc51080..eb7fbaefb95 100644
--- a/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc
+++ b/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc
@@ -90,6 +90,9 @@ void DepsgraphNodeBuilder::build_ik_pose(Scene *scene,

    /* Find the chain's root. */
    bPoseChannel *rootchan = BKE_armature_ik_solver_find_root(pchan, data);
+   if (rootchan == NULL) {
+       return;
+   }

    if (has_operation_node(&ob->id, DEG_NODE_TYPE_EVAL_POSE, rootchan->name,
                           DEG_OPCODE_POSE_IK_SOLVER))
diff --git a/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc b/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc
index 88477e512d1..c23d6d3a2bd 100644
--- a/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc
+++ b/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc
@@ -83,6 +83,9 @@ void DepsgraphRelationBuilder::build_ik_pose(Object *ob,
     * - see notes on direction of rel below...
     */
    bPoseChannel *rootchan = BKE_armature_ik_solver_find_root(pchan, data);
+   if (rootchan == NULL) {
+       return;
+   }
    OperationKey pchan_local_key(&ob->id, DEG_NODE_TYPE_BONE,
                                 pchan->name, DEG_OPCODE_BONE_LOCAL);
    OperationKey init_ik_key(&ob->id, DEG_NODE_TYPE_EVAL_POSE, DEG_OPCODE_POSE_INIT_IK);
Only managed to redo this in `blender2.8`, looks like pointer checks resolve, assigning to Sergey. ``` diff --git a/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc b/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc index d610dc51080..eb7fbaefb95 100644 --- a/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc +++ b/source/blender/depsgraph/intern/builder/deg_builder_nodes_rig.cc @@ -90,6 +90,9 @@ void DepsgraphNodeBuilder::build_ik_pose(Scene *scene, /* Find the chain's root. */ bPoseChannel *rootchan = BKE_armature_ik_solver_find_root(pchan, data); + if (rootchan == NULL) { + return; + } if (has_operation_node(&ob->id, DEG_NODE_TYPE_EVAL_POSE, rootchan->name, DEG_OPCODE_POSE_IK_SOLVER)) diff --git a/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc b/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc index 88477e512d1..c23d6d3a2bd 100644 --- a/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc +++ b/source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc @@ -83,6 +83,9 @@ void DepsgraphRelationBuilder::build_ik_pose(Object *ob, * - see notes on direction of rel below... */ bPoseChannel *rootchan = BKE_armature_ik_solver_find_root(pchan, data); + if (rootchan == NULL) { + return; + } OperationKey pchan_local_key(&ob->id, DEG_NODE_TYPE_BONE, pchan->name, DEG_OPCODE_BONE_LOCAL); OperationKey init_ik_key(&ob->id, DEG_NODE_TYPE_EVAL_POSE, DEG_OPCODE_POSE_INIT_IK); ```
Author

I assumed it was understood by the tags I used. I'm still assuming you knew that but since it's not happening, I believe I should stop assuming it:

use startup command: --enable-new-depsgraph

The issue is not Blender per se, it's new dependency graph. I found the issue because I never start Blender without it (except accidentally/not on purpose, or when testing a bug/crash). It's not a "default-blender-run" error.
If you need me to upload a file, I can but it's just a bone. Shift+A>>Single bone. Insert IK, uncheck Use Tail

If my assumption "was" correct and you already knew that it's depsgraph, then I also renamed/moved my user prefs folder before starting, and it's the same thing.

I assumed it was understood by the tags I used. I'm still assuming you knew that but since it's not happening, I believe I should stop assuming it: use startup command: ***--enable-new-depsgraph*** The issue is not Blender per se, it's new dependency graph. I found the issue because I never start Blender without it (except accidentally/not on purpose, or when testing a bug/crash). It's not a "default-blender-run" error. If you ***need*** me to upload a file, I can but it's just a bone. Shift+A>>Single bone. Insert IK, uncheck Use Tail If my assumption "was" correct and you already knew that it's depsgraph, then I also renamed/moved my user prefs folder before starting, and it's the same thing.

We don't need a .blend file.
I am sorry for missing the tag and quickly triage the report as incomplete.

But it will help if you could precise that you are using the command until master is out of 2.79 like status and new depsgraph becomes default one.

We don't need a .blend file. I am sorry for missing the tag and quickly triage the report as incomplete. But it will help if you could precise that you are using the command until master is out of 2.79 like status and new depsgraph becomes default one.

Added subscriber: @mont29

Added subscriber: @mont29

@Ebone please be more specific in your bug reports, tags like #dependency_graph only mean issue is with a depsgraph, it does not imply at all that it is with the new one (or the old one). That’s why we ask our reporters that they follow our submission template and guidelines, read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

@Ebone please be more specific in your bug reports, tags like #dependency_graph only mean issue is with a depsgraph, it does not imply at all that it is with the new one (or the old one). That’s why we ask our reporters that they follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), read [these tips about bug reports](https:*wiki.blender.org/index.php/Dev:Doc/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

@ideasman42, patch seems fine to me. Dont' see anything wrong with the resulting relations either.

@ideasman42, patch seems fine to me. Dont' see anything wrong with the resulting relations either.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 6d8f63a834

This issue was referenced by 6d8f63a8343a6c0b44318f0a856dcd0fd0206131
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53054
No description provided.