Fix T53054: Parentless bone + IK crashes